--- a/css/style.css
+++ b/css/style.css
@@ -466,7 +466,7 @@ body {
 
         h3 {
           text-align: center;
-          color: var(--clr-base-2);
+          color: var(--clr-base);
           font-weight: bold;
           text-transform: uppercase;
           font-size: var(--txt-title);
